[package]
name = "thl-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
glob = "0.3.2"
indicatif = "0.17.11"
itertools = "0.14.0"
lz4 = "1.28.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
walkdir = "2.5.0"
