[package]
name = "thl-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "2.0.0"
bitvec = "1.0.1"
byte_string = "1.0.0"
byteorder = "1.5.0"
csv = "1.3.1"
diesel = { version = "2.2.10", optional = true }
indicatif = "0.17.11"
itertools = "0.14.0"
log = "0.4.27"
lz4 = "1.28.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
walkdir = "2.5.0"

[features]
diesel = ["dep:diesel"]
